post/getAll working
