# infrastructure/routes/Users.js
@@ -8,7 +8,7 @@ const users = require("../../application/controllers/UserController");
 router.post("/", users.create);
 
 // Retrieve all users
-//router.get("/", users.findAll);
+router.get("/", users.findAll);
 
 // Retrieve a single user with id
 //router.get("/:id", users.findOne);
